--- a/index.html
+++ b/index.html
@@ -315,7 +315,16 @@
 
     <script>
         // This will be populated by the CMS
-        const posts = [];
+        const posts = [
+  {
+    "title": "This is the final test",
+    "url": "https://lifetime-discount-review.deno.dev/blog/this-is-the-final-test.html",
+    "date": "15/12/2025",
+    "excerpt": "Amazing Lifetime Deal!",
+    "readTime": 5,
+    "views": 101
+  }
+];
 
         function renderPosts(postsToRender) {
             const grid = document.getElementById('postsGrid');
