--- a/index.html
+++ b/index.html
@@ -315,16 +315,7 @@
 
     <script>
         // This will be populated by the CMS
-        const posts = [
-  {
-    "title": "This is the final test",
-    "url": "https://lifetime-discount-review.deno.dev/blog/this-is-the-final-test.html",
-    "date": "15/12/2025",
-    "excerpt": "Amazing Lifetime Deal!",
-    "readTime": 5,
-    "views": 140
-  }
-];
+        const posts = [];
 
         function renderPosts(postsToRender) {
             const grid = document.getElementById('postsGrid');
