--- a/index.html
+++ b/index.html
@@ -315,7 +315,16 @@
 
     <script>
         // This will be populated by the CMS
-        const posts = [];
+        const posts = [
+  {
+    "title": "Wow",
+    "url": "https://lifetime-discount-review.deno.dev/blog/wow.html",
+    "date": "15/12/2025",
+    "excerpt": "Amazing Lifetime Deal!",
+    "readTime": 5,
+    "views": 699
+  }
+];
 
         function renderPosts(postsToRender) {
             const grid = document.getElementById('postsGrid');
